* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)

== 2.3.6 (2023-04-09) - @mojavelinux

Bug Fixes::

* rework `File.absolute_path?` patch so it returns correct response when running on JRuby

=== Details

{url-repo}/releases/tag/v2.3.6[git tag] | {url-repo}/compare/v2.3.5\...v2.3.6[full diff]

== 2.3.5 (2023-03-31) - @mojavelinux

Enhancements::

* add `callout-list-marker-font-color` theme key to control color of conum marker in callout list (#2402)

Bug Fixes::

* catalog all footnotes found inside AsciiDoc table cells and render them in the footnotes list (#2410)
* do not drop section that follows empty index (#2368)
* restore bottom margin on table with `breakable` or `unbreakable` option (#2379)
* honor theme settings for caption on table with `breakable` or `unbreakable` option (#2379)
* use first recto page after toc when media is prepress and page numbering or running content start-at value is `after-toc` (#2398)

=== Details

{url-repo}/releases/tag/v2.3.5[git tag] | {url-repo}/compare/v2.3.4\...v2.3.5[full diff]

== 2.3.4 (2022-10-29) - @mojavelinux

Bug Fixes::

* resolve attribute references in target of image in running content (#2361)
* replace use of AbstractNode#role= method to ensure compatiblity with minimum supported version of Asciidoctor (Asciidoctor 2.0.10) (#2363)

=== Details

{url-repo}/releases/tag/v2.3.4[git tag] | {url-repo}/compare/v2.3.3\...v2.3.4[full diff]

== 2.3.3 (2022-10-21) - @mojavelinux

Bug Fixes::

* fix crash if last fragment in TOC entry is not rendered (#2354)
* pass `-dNEWPDF=false` to Ghostscript when optimizing PDF so it does not break internal links (#2355)

=== Details
